--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="The Blog of Josh Lospinoso">
-    <meta name="author" content="Josh Lospinoso">
+    <meta name="description" content="The Site of Jonathan Meyers">
+    <meta name="author" content="Jonathan Meyers">
     <link rel="icon" href="/favicon.ico">
     <title>{{ page.title }}</title>
     <link rel="stylesheet" href="/css/bootstrap.min.css" type="text/css" />
@@ -16,11 +16,10 @@
 <body>
 <div class="container offset-md-2 col-md-8">
     <nav class="navbar navbar-light bg-light">
-		<a class="navbar-brand" href="https://keybase.io/jlospinoso" target="_blank">Josh</a>
+		<a class="navbar-brand" href="https://keybase.io/jmeyers2" target="_blank">Josh</a>
 		<ul class="nav navbar-nav">
-			<li class="nav-item"><a class="nav-link" href="/">Blog</a></li>
-			<li class="nav-item"><a class="nav-link" href="/scholarly.html">Articles</a></li>
-			<li class="nav-item"><a class="nav-link" href="https://ccc.codes" target="_blank">C++ Book</a></li>
+			<li class="nav-item"><a class="nav-link" href="/">Media</a></li>
+            <li class="nav-item"><a class="nav-link" href="/blog">Blog</a></li>
 		</ul>
     </nav>
     <hr>
@@ -34,13 +33,13 @@
                 Josh Lospinoso &copy; 2019
             </div>
             <div class="col-xs-4 text-xs-center">
-                <a href="https://www.linkedin.com/in/jalospinoso" target="_blank">
+                <a href="https://www.linkedin.com/in/jonathanmeyers1/" target="_blank">
       					<img src="/images/linkedin.png" alt="LinkedIn" height="32" width="32"/>
         				</a>
-        				<a href="https://twitter.com/jalospinoso" target="_blank">
+        				<a href="https://twitter.com/jmeyers2" target="_blank">
         					<img src="/images/twitter.png" alt="Twitter" height="32" width="32"/>
         				</a>
-        				<a href="https://github.com/JLospinoso" target="_blank">
+        				<a href="https://github.com/jmymy" target="_blank">
         					<img src="/images/github.png" alt="Github" height="32" width="32"/>
         				</a>
             </div>
@@ -54,16 +53,6 @@
 <script src="/js/bootstrap.min.js"></script>
 <script src="/js/ie10-viewport-bug-workaround.js"></script>
 <script src="/js/offcanvas.js"></script>
-<!-- Google Analytics -->
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "https://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-try {
-  var pageTracker = _gat._getTracker("UA-25952771-1");
-pageTracker._trackPageview();
-} catch(err) {}
-</script>
+<!-- Add Google Analytics In -->
 </body>
 </html>
