--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
 <body>
 <div class="container offset-md-2 col-md-8">
     <nav class="navbar navbar-light bg-light">
-		<a class="navbar-brand" href="https://keybase.io/jmeyers2" target="_blank">Josh</a>
+		<a class="navbar-brand" href="https://keybase.io/jmeyers2" target="_blank">Jonathan</a>
 		<ul class="nav navbar-nav">
 			<li class="nav-item"><a class="nav-link" href="/">Media</a></li>
             <li class="nav-item"><a class="nav-link" href="/blog">Blog</a></li>
@@ -30,17 +30,14 @@
     <footer>
         <div class="row">
             <div class="col-xs-4 text-xs-left">
-                Josh Lospinoso &copy; 2019
+                Jonathan Meyers &copy; 2021
             </div>
             <div class="col-xs-4 text-xs-center">
                 <a href="https://www.linkedin.com/in/jonathanmeyers1/" target="_blank">
-      					<img src="/images/linkedin.png" alt="LinkedIn" height="32" width="32"/>
-        				</a>
-        				<a href="https://twitter.com/jmeyers2" target="_blank">
-        					<img src="/images/twitter.png" alt="Twitter" height="32" width="32"/>
+      					<img src="/images/LI-In-Bug.png" alt="LinkedIn" height="64" width="64"/>
         				</a>
         				<a href="https://github.com/jmymy" target="_blank">
-        					<img src="/images/github.png" alt="Github" height="32" width="32"/>
+        					<img src="/images/GitHub-Mark-120px-plus.png" alt="Github" height="64" width="64"/>
         				</a>
             </div>
             <div class="col-xs-4 text-xs-right"></div>
