--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
     <nav class="navbar navbar-light bg-light">
 		<a class="navbar-brand" href="https://keybase.io/jmeyers2" target="_blank">Jonathan</a>
 		<ul class="nav navbar-nav">
-			<li class="nav-item"><a class="nav-link" href="/">Blog</a></li>
+			<li class="nav-item"><a class="nav-link" href="/">Home</a></li>
 		</ul>
     </nav>
     <hr>
