--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,7 @@
 		<a class="navbar-brand" href="https://keybase.io/jmeyers2" target="_blank">Jonathan</a>
 		<ul class="nav navbar-nav">
 			<li class="nav-item"><a class="nav-link" href="/">Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="/about.html">About</a></li>
 		</ul>
     </nav>
     <hr>
